2020.4.3 TDH

fix memory leak (remove delete poly from Liste destructor, only delete
next if it is not NULL).

2019.05.03

Register BinSeg_interface in src/Rwrappers.cc -- this function is used
with .C, and was formerly known as Call_BinSeg (renamed to avoid
confusion because .Call is not used).

2019.01.19

Remove dependency on cghseg.

Register routines in src/Rwrappers.cc

2016.10.25

Fixed
* checking package dependencies ... ERROR
Namespace dependency not required: ‘cghseg’

2016.10.18

Some improved documentation for the return values of Fpop.

Suggests: cghseg (instead of Depends).

packageStartupMessage (instead of cat) and .onAttach (instead of .onLoad).

2016.10.16

Remove GSL requirement, instead use INFINITY which is defined in
math.h

2016.10.03

package and docs updates to pass R CMD check.

2014.7.16

multiBinSeg memory leak fixed.

passes R CMD check with no errors, no warnings.

0.0.1

first version with fast fpop code.

multiBinSeg produced a memory leak.