@@ -1,8 +1,18 @@
 #!/bin/bash
-cd ..
 set -o errexit
-rm -rf fpop-release
-cp -r pkg fpop-release
-PKG_TGZ=$(R CMD build fpop-release|grep building|sed "s/.*\(fpop.*.tar.gz\).*/\1/")
-R CMD INSTALL $PKG_TGZ
-R CMD check --as-cran $PKG_TGZ
+PREGEX="^Package: "
+PKG=$(grep $PREGEX DESCRIPTION|sed "s/$PREGEX//")
+echo Package from DESCRIPTION: $PKG
+R -e "if(require(inlinedocs))package.skeleton.dx('.')"
+cd ..
+
+echo Building $RELEASE
+RCMD="R --vanilla CMD"
+$RCMD build pkg | tee build.out
+PKG_TGZ=$(grep building build.out|sed "s/.*\($PKG.*.tar.gz\).*/\1/")
+
+echo Installing $PKG_TGZ
+$RCMD INSTALL $PKG_TGZ
+
+echo Checking $PKG_TGZ
+$RCMD check --as-cran $PKG_TGZ
