@@ -3,12 +3,14 @@
 \title{Fpop}
 \description{Function calling the fpop algorithm, use functional pruning and
 optimal partionning to recover the best segmentation with respect
-to the L2 loss with a per change-point penalty of lambda. More
+to the L2 loss with a per change-point penalty of \code{lambda}. More
 precisely, this function computes the solution to argmin_m
-sum_{i=1}^n (x_i-m_i)^2 + lambda * sum_{i=1}^{n-1} I(m_i !=
-m_{i+1}), where the indicator function I counts the number of
-changes in the mean vector m.}
-\usage{Fpop(x, lambda, mini = min(x), maxi = max(x))}
+sum_{i=1}^n (x_i-m_i)^2 + \code{lambda} * sum_{i=1}^{n-1} [1+I(m_i !=
+m_{i+1})], where the indicator function I counts the number of
+changes in the mean vector m, so the total penalty term is
+equivalent to the number of segments.}
+\usage{Fpop(x, lambda, mini = min(x), 
+    maxi = max(x))}
 \arguments{
   \item{x}{A vector of double : the signal to be segmented}
   \item{lambda}{Value of the penalty}
@@ -17,12 +19,15 @@ changes in the mean vector m.}
 }
 
 \value{Named list with the following elements: input data (signal, n,
-lambda, min, max), path (best previous segment end up to each data
-point), cost (optimal penalized cost up to each data point), t.est
-(vector of overall optimal segment ends), K (optimal number of
-segments), J.est (total un-penalized cost of optimal model). To
-see how cost relates to J.est, see definition of J.est in the R
-source code for this function.}
+\code{lambda}, min, max), path (best previous segment end up to each data
+point), cost (optimal penalized cost up to each data point, where
+loss is the square loss without the constant term and the penalty
+is \code{lambda} times the number of segments), t.est (vector of overall
+optimal segment ends), K (optimal number of segments), J.est
+(total un-penalized cost of optimal model, aka total square
+loss). To see how cost relates to J.est, see definition of J.est
+in the R source code for this function. (last cost = J.est -
+sum.of.squares + K*lambda)}
 
 \author{Guillem Rigaill, Toby Dylan Hocking}
 
