@@ -3,7 +3,8 @@
 \title{fpop analysis}
 \description{A function to count the number of intervals and or candidate
 segmentation at each step of fpop (under-developpemment)}
-\usage{fpop_analysis(x, lambda, mini = min(x), maxi = max(x))}
+\usage{fpop_analysis(x, lambda, 
+    mini = min(x), maxi = max(x))}
 \arguments{
   \item{x}{A vector of double : the signal to be segmented}
   \item{lambda}{Value of the penalty}
